Bug 479695 - In icons view mode, file name moves left during rename
Summary: In icons view mode, file name moves left during rename
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: icons mode (other bugs)
Version First Reported In: 24.01.90
Platform: Arch Linux Linux
: HI minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6, regression
: 482042 482130 483300 483820 484179 485879 486278 487005 492803 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-01-12 14:36 UTC by Patrick Silva
Modified: 2024-09-08 11:48 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.08.1
Sentry Crash Report:


Attachments
screen recording (233.22 KB, video/webm)
2024-01-12 14:36 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2024-01-12 14:36:39 UTC
Created attachment 164843 [details]
screen recording

STEPS TO REPRODUCE
1. select a file and press F2
2. press right arrow
3. press backspace

OBSERVED RESULT
File name moves itself. Please watch the attached screen recording.

EXPECTED RESULT
the observed result should not occur

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.92.0
KDE Frameworks Version: 5.248.0
Qt Version: 6.7.0
Graphics Platform: Wayland
Comment 1 fanzhuyifan 2024-01-13 05:42:48 UTC
Can confirm in icons view mode.
Comment 2 fanzhuyifan 2024-01-13 05:48:41 UTC
For me this happens for all edits, not just pressing backspace.
Comment 3 fanzhuyifan 2024-01-13 08:53:13 UTC
Seems to have been introduced by my commit: https://invent.kde.org/system/dolphin/-/commit/8297e0a8c97c6e1f6d46b9ecc9c5f495f294d5b8
Comment 4 Patrick Silva 2024-02-29 18:09:24 UTC
*** Bug 482042 has been marked as a duplicate of this bug. ***
Comment 5 Patrick Silva 2024-03-01 13:30:18 UTC
*** Bug 482130 has been marked as a duplicate of this bug. ***
Comment 6 fanzhuyifan 2024-03-12 03:57:02 UTC
*** Bug 483300 has been marked as a duplicate of this bug. ***
Comment 7 Patrick Silva 2024-03-17 16:22:57 UTC
*** Bug 483820 has been marked as a duplicate of this bug. ***
Comment 8 Patrick Silva 2024-03-21 22:17:28 UTC
*** Bug 484179 has been marked as a duplicate of this bug. ***
Comment 9 Antti Savolainen 2024-03-24 11:33:46 UTC
Just chiming in that I have this too.
Comment 10 Patrick Silva 2024-04-21 09:59:24 UTC
*** Bug 485879 has been marked as a duplicate of this bug. ***
Comment 11 fanzhuyifan 2024-04-29 16:16:13 UTC
*** Bug 486278 has been marked as a duplicate of this bug. ***
Comment 12 L5Pro 2024-06-22 12:38:05 UTC
I have this problem too.
Comment 13 Felix Ernst 2024-06-26 10:29:41 UTC
*** Bug 487005 has been marked as a duplicate of this bug. ***
Comment 14 Bug Janitor Service 2024-08-25 09:53:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/820
Comment 15 Méven 2024-08-28 07:12:41 UTC
Git commit 4a0188e5006c1a5cf5a8d607f50560e97fc95770 by Méven Car.
Committed on 28/08/2024 at 07:04.
Pushed by meven into branch 'master'.

KItemListRoleEditor: minimize resize() occurences

Adjust document width to match its widget width.

M  +12   -2    src/kitemviews/private/kitemlistroleeditor.cpp

https://invent.kde.org/system/dolphin/-/commit/4a0188e5006c1a5cf5a8d607f50560e97fc95770
Comment 16 mozo 2024-08-28 08:55:11 UTC
(In reply to Méven from comment #15)
> Git commit 4a0188e5006c1a5cf5a8d607f50560e97fc95770 by Méven Car.
> Committed on 28/08/2024 at 07:04.
> Pushed by meven into branch 'master'.
> 
> KItemListRoleEditor: minimize resize() occurences
> 
> Adjust document width to match its widget width.
> 
> M  +12   -2    src/kitemviews/private/kitemlistroleeditor.cpp
> 
> https://invent.kde.org/system/dolphin/-/commit/
> 4a0188e5006c1a5cf5a8d607f50560e97fc95770

Thanks!
Comment 17 Méven 2024-08-29 11:15:24 UTC
Git commit 63fd6ed1b1e248ebc752c9c2270e13335138310c by Méven Car.
Committed on 29/08/2024 at 11:15.
Pushed by meven into branch 'release/24.08'.

KItemListRoleEditor: minimize resize() occurences

Adjust document width to match its widget width.
(cherry picked from commit 4a0188e5006c1a5cf5a8d607f50560e97fc95770)

M  +12   -2    src/kitemviews/private/kitemlistroleeditor.cpp

https://invent.kde.org/system/dolphin/-/commit/63fd6ed1b1e248ebc752c9c2270e13335138310c
Comment 18 Filip 2024-09-08 11:48:21 UTC
*** Bug 492803 has been marked as a duplicate of this bug. ***