KItemListRoleEditor: minimize resize() occurences

Adjust document width to match its widget width.

BUG: 479695